--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(OpenSSL REQUIRED)
 include_directories(${OPENSSL_INCLUDE_DIR})
 
 set(SOURCES
-    src/ChromaDB/APIClient.cpp
+    src/ChromaDB/ChromaApiClient.cpp
     src/ChromaDB/Client.cpp
     src/ChromaDB/Collection.cpp
     src/ChromaDB/Embeddings/EmbeddingFunction.cpp
@@ -43,4 +43,4 @@ install(TARGETS chromadb
 install(DIRECTORY include/ChromaDB/Embeddings DESTINATION include/ChromaDB)
 install(DIRECTORY include/Http/ DESTINATION include/Http)
 install(DIRECTORY include/Json/ DESTINATION include/Json)
-install(FILES include/ChromaDB/APIClient.h include/ChromaDB/Utils.h include/ChromaDB/Client.h include/ChromaDB/Collection.h include/ChromaDB/Exception.h DESTINATION include/ChromaDB)
+install(FILES include/ChromaDB/ChromaApiClient.h include/ChromaDB/QueryResponseResource.h include/ChromaDB/Utils.h include/ChromaDB/Client.h include/ChromaDB/Collection.h include/ChromaDB/Exception.h DESTINATION include/ChromaDB)
