--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 version: '3.9'
 
 services:
-    chroma:
+    chroma-no-auth:
         image: 'chromadb/chroma'
         ports:
             - '8080:8000'
         volumes:
             - chroma-data:/chroma/chroma
+
+    chroma-with-auth:
+        image: 'chromadb/chroma'
+        ports:
+            - '8081:8000'
+        volumes:
+            - chroma-data:/chroma/chroma
+        environment:
+            CHROMA_SERVER_AUTH_CREDENTIALS: 'authToken'
+            CHROMA_SERVER_AUTH_CREDENTIALS_PROVIDER: 'chromadb.auth.token.TokenConfigServerAuthCredentialsProvider'
+            CHROMA_SERVER_AUTH_PROVIDER: 'chromadb.auth.token.TokenAuthServerProvider'
 
 volumes:
     chroma-data:
