--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Initialize submodules
+      run: git submodule update --init --recursive
+
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install -y cmake libssl-dev
 
