--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,8 @@ jobs:
         ports:
           - 8081:8000
         env:
-            CHROMA_SERVER_AUTH_CREDENTIALS: 'authToken'
-            CHROMA_SERVER_AUTH_CREDENTIALS_PROVIDER: 'chromadb.auth.token.TokenConfigServerAuthCredentialsProvider'
-            CHROMA_SERVER_AUTH_PROVIDER: 'chromadb.auth.token.TokenAuthServerProvider'
+            CHROMA_SERVER_AUTHN_CREDENTIALS: authToken
+            CHROMA_SERVER_AUTHN_PROVIDER: chromadb.auth.token.TokenConfigServerAuthCredentialsProvider
 
     steps:
     - name: Checkout code
