Change chroma container auth config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,8 @@ services:
         volumes:
             - chroma-data:/chroma/chroma
         environment:
-            CHROMA_SERVER_AUTH_CREDENTIALS: 'authToken'
-            CHROMA_SERVER_AUTH_CREDENTIALS_PROVIDER: 'chromadb.auth.token.TokenConfigServerAuthCredentialsProvider'
-            CHROMA_SERVER_AUTH_PROVIDER: 'chromadb.auth.token.TokenAuthServerProvider'
+            CHROMA_SERVER_AUTHN_CREDENTIALS: 'authToken'
+            CHROMA_SERVER_AUTHN_PROVIDER: 'chromadb.auth.token_authn.TokenAuthenticationServerProvider'
 
 volumes:
     chroma-data:
