--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,12 +15,12 @@ jobs:
 
     services:
       chroma-no-auth:
-        image: chromadb/chroma
+        image: chromadb/chroma:0.5.7
         ports:
           - 8080:8000
 
       chroma-with-auth:
-        image: chromadb/chroma
+        image: chromadb/chroma:0.5.7
         ports:
           - 8081:8000
         env:
