--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,8 +34,18 @@ jobs:
     - name: Initialize submodules
       run: git submodule update --init --recursive
 
+    - name: Install GCC 13
+      run: |
+        sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+        sudo apt-get update
+        sudo apt-get install -y gcc-13 g++-13
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 60
+        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-13 60
+        gcc --version
+        g++ --version
+
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake libssl-dev
+      run: sudo apt-get install -y cmake libssl-dev
 
     - name: Configure CMake
       run: cmake -S . -B build
