--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      JINA_API_KEY: ${{ secrets.JINA_API_KEY }}
 
     services:
       chroma-no-auth:
