--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
     chroma-no-auth:
-        image: 'chromadb/chroma:0.6.2'
+        image: 'chromadb/chroma:1.0.8'
         ports:
             - '8080:8000'
         volumes:
             - chroma-data:/chroma/chroma
 
     chroma-with-auth:
-        image: 'chromadb/chroma:0.6.2'
+        image: 'chromadb/chroma:1.0.8'
         ports:
             - '8081:8000'
         volumes:
@@ -15,6 +15,7 @@ services:
         environment:
             CHROMA_SERVER_AUTHN_CREDENTIALS: 'authToken'
             CHROMA_SERVER_AUTHN_PROVIDER: 'chromadb.auth.token_authn.TokenAuthenticationServerProvider'
+            CHROMA_AUTH_TOKEN_TRANSPORT_HEADER: 'Authorization'
 
 volumes:
     chroma-data:
