--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
         ports:
             - '8080:8000'
         volumes:
-            - chroma-data:/chroma/chroma
+            - chroma-data:/data
 
     chroma-with-auth:
         image: 'chromadb/chroma:1.0.8'
         ports:
             - '8081:8000'
         volumes:
-            - chroma-data:/chroma/chroma
+            - chroma-data:/data
         environment:
             CHROMA_SERVER_AUTHN_CREDENTIALS: 'authToken'
             CHROMA_SERVER_AUTHN_PROVIDER: 'chromadb.auth.token_authn.TokenAuthenticationServerProvider'
