--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,10 @@
 services:
-    chroma-no-auth:
+    chromadb:
         image: 'chromadb/chroma:1.0.8'
         ports:
             - '8080:8000'
         volumes:
             - chroma-data:/data
-
-    chroma-with-auth:
-        image: 'chromadb/chroma:1.0.8'
-        ports:
-            - '8081:8000'
-        volumes:
-            - chroma-data:/data
-        environment:
-            CHROMA_SERVER_AUTHN_CREDENTIALS: 'authToken'
-            CHROMA_SERVER_AUTHN_PROVIDER: 'chromadb.auth.token_authn.TokenAuthenticationServerProvider'
-            CHROMA_AUTH_TOKEN_TRANSPORT_HEADER: 'Authorization'
 
 volumes:
     chroma-data:
