--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
             - '8080:8000'
         volumes:
             - chroma-data:/data
+            - ./chroma-config.yaml:/config.yaml
 
 volumes:
     chroma-data:
